--- a/pom.xml
+++ b/pom.xml
@@ -1,80 +1,80 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.flywaydb</groupId>
-  <artifactId>flyway-commandline</artifactId>
-  <packaging>rpm</packaging>
-  <version>5.2.4</version>
-  <name>flyway-commandline</name>
-  <description>Version control for your database. Robust schema evolution across all your environments. With ease, pleasure and plain SQL.</description>
-  <url>https://flywaydb.org</url>
-  <dependencies>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.flywaydb</groupId>
-                  <artifactId>flyway-commandline</artifactId>
-                  <version>5.2.4</version>
-                  <type>tar.gz</type>
-                </artifactItem>
-              </artifactItems>
-              <outputDirectory>${project.build.directory}/binary</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>rpm-maven-plugin</artifactId>
-        <version>2.2.0</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>generate-rpm</id>
-            <goals>
-              <goal>rpm</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <license>Apache License, Version 2.0</license>
-          <group>Application/Database</group>
-          <sourceEncoding>utf-8</sourceEncoding>
-          <requires>
-            <require>java &gt;= 7</require>
-          </requires>
-          <mappings>
-            <mapping>
-              <directory>/opt</directory>
-              <filemode>440</filemode>
-              <username>root</username>
-              <groupname>root</groupname>
-              <sources>
-                <source>
-                  <location>${project.build.directory}/binary</location>
-                </source>
-                <softlinkSource>
-                  <destination>flyway</destination>
-                  <location>flyway-5.2.4</location>
-                </softlinkSource>
-              </sources>
-            </mapping>
-          </mappings>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  </project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-commandline</artifactId>
+    <packaging>rpm</packaging>
+    <version>5.2.4</version>
+    <name>flyway-commandline</name>
+    <description>Version control for your database. Robust schema evolution across all your environments. With ease, pleasure and plain SQL.</description>
+    <url>https://flywaydb.org</url>
+    <dependencies>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.flywaydb</groupId>
+                                    <artifactId>flyway-commandline</artifactId>
+                                    <version>5.2.4</version>
+                                    <type>tar.gz</type>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/binary</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>rpm-maven-plugin</artifactId>
+                <version>2.2.0</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>generate-rpm</id>
+                        <goals>
+                            <goal>rpm</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <license>Apache License, Version 2.0</license>
+                    <group>Application/Database</group>
+                    <sourceEncoding>utf-8</sourceEncoding>
+                    <requires>
+                        <require>java &gt;= 7</require>
+                    </requires>
+                    <mappings>
+                        <mapping>
+                            <directory>/opt</directory>
+                            <filemode>440</filemode>
+                            <username>root</username>
+                            <groupname>root</groupname>
+                            <sources>
+                                <source>
+                                    <location>${project.build.directory}/binary</location>
+                                </source>
+                                <softlinkSource>
+                                    <destination>flyway</destination>
+                                    <location>flyway-5.2.4</location>
+                                </softlinkSource>
+                            </sources>
+                        </mapping>
+                    </mappings>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
